[metadata]
name = emcpy
version = 0.0.1
description = A collection of python tools used at EMC
long_description = file: README.md
long_description_content_type = text/markdown
author = NOAA-EMC
author_email = rahul.mahajan@noaa.gov
keywords = NOAA, EMC
home_page = https://github.com/noaa-emc/emcpy
license = GNU Lesser General Public License
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Typing :: Typed
project_urls =
    Bug Tracker = https://github.com/noaa-emc/emcpy/issues
    CI = https://github.com/noaa-emc/emcpy/actions

[options]
zip_safe = False
include_package_data = True
package_dir =
  =src
packages = find_namespace:
python_requires = >= 3.6
setup_requires =
  setuptools
install_requires =
  numpy
  scipy
  pandas
  netcdf4
  scikit-learn
  pdoc
  matplotlib
  Cython
  cartopy
tests_require =
  pytest

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md, *.yaml *.png

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
